fixed the header bug on firefox

--- a/app/assets/stylesheets/frontend/header.scss
+++ b/app/assets/stylesheets/frontend/header.scss
@@ -16,6 +16,12 @@
     }
   }
 
+  .header-logo,
+  .header-menu,
+  .pure-form {
+    float: left;
+  }
+
   .pure-form {
     vertical-align: middle;
     position: relative;
